--- a/LivrosV2/app/src/main/res/layout/activity_register.xml
+++ b/LivrosV2/app/src/main/res/layout/activity_register.xml
@@ -95,7 +95,8 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.365" />
+        app:layout_constraintVertical_bias="0.365"
+        tools:ignore="Deprecated" />
 
     <TextView
         android:id="@+id/textView"
